package Fabrique;
import FabriqueAbstract.Pizzeria;

public class PizzeriaBrest extends Pizzeria{

	public PizzeriaBrest() {
		
	}
}
