package Fabrique;
import FabriqueAbstract.Pizzeria;

public class PizzeriaStrasbourg extends Pizzeria{

	public PizzeriaStrasbourg() {
		
	}
	
}
