package Produit;

import ProduitAbtrait.Pizza;

public class PizzaCheeseStyleBrest extends Pizza{

}
