package Produit;

import ProduitAbtrait.Pizza;

public class PizzaCheeseStyleStrasbourg extends Pizza{

}
