package Produit;

import ProduitAbtrait.Pizza;

public class PizzaGrecqueStyleBrest extends Pizza{

}
