package Produit;

import ProduitAbtrait.Pizza;

public class PizzaGrecqueStyleStrasbourg extends Pizza{

}
