package Produit;

import ProduitAbtrait.Pizza;

public class PizzaPoivronStyleBrest extends Pizza{

}
