package Produit;

import ProduitAbtrait.Pizza;

public class PizzaPoivronStyleStrasbourg extends Pizza{

}
