@startuml

' definitions
' -----------
!include config.cfg

' package ""
abstract class Pizza
abstract class Pizzeria
abstract class PizzaFactory
class PizzeriaBrest
class PizzeriaStrasbourg
class PizzeriaFactory
class PizzeriaBrest
class PizzeriaStrasbourg
class PizzaCheeseStyleBrest
class PizzaCheeseStyleStrasbourg
class PizzaPoivronStyleBrest
class PizzaPoivronStyleStrasbourg
class PizzaGrecqueStyleBrest
class PizzaGrecqueStyleStrasbourg
class PizzaTestDrive
' end package

Pizza  <|-- "PizzaCheeseStyleBrest" 
Pizza  <|-- "PizzaCheeseStyleStrasbourg"
Pizza  <|-- "PizzaPoivronStyleBrest" 
Pizza  <|-- "PizzaPoivronStyleStrasbourg"
Pizza  <|-- "PizzaGrecqueStyleBrest" 
Pizza  <|-- "PizzaGrecqueStyleStrasbourg"
Pizzeria o--> "1" PizzaFactory 
Pizzeria ..> Pizza
Pizzeria <|-- PizzeriaBrest
Pizzeria <|-- PizzeriaStrasbourg
Pizzeria <.. PizzeriaFactory 
PizzaTestDrive ..> Pizza
PizzaTestDrive ..> PizzeriaFactory  
PizzaFactory ..> Pizza
PizzaFactory <|-- PizzeriaBrest
PizzaFactory <|-- PizzeriaStrasbourg
' content
' -------

' Pizza:
Pizza : #String name
Pizza : #String pate 
Pizza : #String sauce
Pizza : #ArrayList garnitures
Pizza : +void preparer()
Pizza : +void cuire()
Pizza : +void couper()
Pizza : +void emballer()
Pizza : +void getNom()


' PizzaCheeseStyleStrasbourg:
PizzaCheeseStyleStrasbourg : +PizzaCheeseStyleStrasbourg()

' PizzaCheeseStyleBrest:
PizzaCheeseStyleBrest : +PizzaCheeseStyleBrest()

' PizzaPoivronStyleStrasbourg:
PizzaPoivronStyleStrasbourg : +PizzaPoivronStyleStrasbourg()

' PizzaPoivronStyleBrest:
PizzaPoivronStyleBrest : +PizzaPoivronStyleBrest()

' PizzaGrecqueStyleStrasbourg:
PizzaGrecqueStyleStrasbourg : +PizzaGrecqueStyleStrasbourg()

' PizzaGrecqueStyleBrest:
PizzaGrecqueStyleBrest : +PizzaGrecqueStyleBrest()

'PizzaTestDrive:
PizzaTestDrive : +void main(String[] args)

'PizzeriaFactory:
PizzeriaFactory : ~PizzeriaFactory uniqueInstance
PizzeriaFactory : -PizzeriaFactory()
PizzeriaFactory : +PizzeriaFactory getInstance()
PizzeriaFactory : +Pizzeria creerPizza(String name)

'Pizzeria:
Pizzeria : +Pizza commanderPizza(String type)
Pizzeria : +Pizzeria(PizzaFactory pizzaFactory)
Pizzeria : #Pizza creerPizza(String type)

'PizzaFactory:
PizzaFactory : +Pizza creerPizza(String name)

'PizzeriaStrasbourg:
PizzeriaStrasbourg : +PizzeriaStrasbourg()

'PizzeriaBrest:
PizzeriaBrest : PizzeriaBrest()

'PizzeriaStrasbourg:
PizzeriaStrasbourg : ~PizzeriaStrasbourg uniqueInstance
PizzeriaStrasbourg : -PizzeriaStrasbourg()
PizzeriaStrasbourg : +PizzeriaStrasbourg getInstance()
PizzeriaStrasbourg : +Pizza creerPizza(String name)

'PizzeriaBrest:
PizzeriaBrest : ~PizzeriaBrest uniqueInstance
PizzeriaBrest : -PizzeriaBrest()
PizzeriaBrest : +PizzeriaBrest getInstance()
PizzeriaBrest : +Pizza creerPizza(String name)



@enduml
